# Ejer-Huespedes

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Clinica.cpp  Clinica.h  Evaluacion.cpp  Evaluacion.h  Hogar.cpp  Hogar.h  Huesped.cpp  Huesped.h  Main.cpp  Propietario.cpp  Propietario.h  Reserva.cpp  Reserva.h
test/: Huespedes_test.cpp
